# tfbm

./: .gitignore  .readthedocs.yaml  Doxyfile  LICENSE.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test_barman.py
USECASES/fracture_flow/: main_0.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  numerical.rst  theory.rst
docs/source/modules/: pytfbm.rst  pytfbm1.rst  pytfbm2.rst  pytfbm3.rst  tests.rst  tfbm.rst  tfbm2.rst
legacy/: __init__.py  tfbm1_class.py  tfbm2_class.py  tfbm3_class.py
profiling/: profile_results  profile_results_chol  profiling.ipynb
profiling/.ipynb_checkpoints/: profiling-checkpoint.ipynb
pytfbm/: TFBM.py
src/: TFBM.py  TFBM1.py  TFBM2.py  TFBM3.py
tests/: brownian.py  general_tests.py  mittag_leffer_test.py  mo.py  quadratic_tests_test.py  statistical_test.py  test_approx.py  test_numerical.py  test_wtih_mock.py
tfbm/: TFBM.py  TFBM1.py  TFBM2.py  TFBM3.py  __init__.py  approx.py  estimation.py  mittag_leffer.py  tests.py
tfbm.egg-info/: PKG-INFO  SOURCES.txt
utils/: cluster_generation.py
